<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_bottom_height"
        android:background="@color/theme_primary"
        android:orientation="vertical">
        <TextView
            android:id="@+id/menu_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/page_title_me"
            style="@style/ToolBarTopTitleTextAppearance"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:fadingEdgeLength="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/layout_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <View style="@style/AppTheme.DeepLine"/>
                <RelativeLayout
                    android:id="@+id/layout_favourite"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height_about_me_item"
                    android:background="@drawable/layout_selector">
                    <TextView
                        android:id="@+id/title_fav_pages"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:drawableLeft="@drawable/user_favourite"
                        android:drawablePadding="20.0dip"
                        android:paddingLeft="20.0dip"
                        android:text="@string/text_my_collection"
                        android:layout_alignParentLeft="true"
                        style="@style/AboutMeItemPrimaryTextAppearance"/>
                    <TextView
                        android:id="@+id/text_fav_pages"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20.0dip"
                        android:gravity="center|right"
                        android:layout_alignParentRight="true"
                        style="@style/AboutMeItemSecondaryTextAppearance"/>
                </RelativeLayout>
                <View style="@style/AppTheme.DeepLine"/>
                <RelativeLayout
                    android:id="@+id/layout_read_history"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height_about_me_item"
                    android:background="@drawable/layout_selector">
                    <TextView
                        android:id="@+id/title_read_history"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:drawableLeft="@drawable/user_viewed"
                        android:drawablePadding="20.0dip"
                        android:paddingLeft="20.0dip"
                        android:text="@string/text_my_read_history"
                        android:layout_alignParentLeft="true"
                        style="@style/AboutMeItemPrimaryTextAppearance"/>
                    <TextView
                        android:id="@+id/text_read_history"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|right"
                        android:layout_marginRight="20.0dip"
                        android:layout_alignParentRight="true"
                        style="@style/AboutMeItemSecondaryTextAppearance"/>
                </RelativeLayout>
                <View style="@style/AppTheme.DeepLine"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_user_info"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <View style="@style/AppTheme.DeepLine"/>
                <RelativeLayout
                    android:id="@+id/layout_about_author"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height_about_me_item"
                    android:background="@drawable/layout_selector">
                    <TextView
                        android:id="@+id/title_about_author"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:drawableLeft="@drawable/user_about_author"
                        android:drawablePadding="20.0dip"
                        android:paddingLeft="20.0dip"
                        android:text="@string/text_about_author"
                        android:layout_alignParentLeft="true"
                        style="@style/AboutMeItemPrimaryTextAppearance"/>
                </RelativeLayout>
                <View style="@style/AppTheme.DeepLine"/>
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</LinearLayout>