<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_bottom_height"
        android:background="@color/theme_primary"
        android:orientation="vertical">
        <TextView
            android:id="@+id/menu_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/page_title_present"
            style="@style/ToolBarTopTitleTextAppearance"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_present_item"
            android:layout_alignParentTop="true"
            android:focusableInTouchMode="true">
            <EditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen"
                android:inputType="textUri"
                android:singleLine="true"
                android:textSize="@dimen/text_size_present_edit"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_present_item"
            android:layout_below="@id/layout_address"
            android:focusableInTouchMode="true">
            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen"
                android:inputType="textUri"
                android:singleLine="true"
                android:textSize="@dimen/text_size_present_edit"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_present_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_present_item"
            android:layout_below="@id/layout_title"
            android:focusableInTouchMode="true">
            <EditText
                android:id="@+id/edit_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen"
                android:inputType="textUri"
                android:singleLine="true"
                android:textSize="@dimen/text_size_present_edit"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_gank_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_present_item"
            android:layout_below="@id/layout_present_id"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/title_type"/>
            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:entries="@array/present_type">

            </Spinner>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_present_item"
            android:layout_below="@id/layout_gank_type"
            android:layout_marginTop="40dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/bt_submit"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#ff000000"
                android:text="@string/text_submit"
                android:background="@drawable/button_bg"/>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>